--- a/Mail Man/Mail Man.csproj
+++ b/Mail Man/Mail Man.csproj
@@ -9,10 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Login_background.jpg" />
+    <None Remove="posticon.jpg" />
+    <None Remove="posticon1.jpg" />
     <None Remove="Post_icon.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Login_background.jpg" />
+    <Resource Include="posticon.jpg" />
+    <Resource Include="posticon1.jpg" />
     <Resource Include="Post_icon.png" />
   </ItemGroup>
 
