--- a/Mail Man/Data/Data.csproj
+++ b/Mail Man/Data/Data.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ceTe.DynamicPDF.CoreSuite.NET" Version="12.4.0" />
     <PackageReference Include="MilestoneTG.TransientFaultHandling.Data.SqlServer" Version="2.2.0" />
     <PackageReference Include="SqlAppLockHelper.SystemData" Version="1.0.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
