add logo and fix bug

--- a/Mail Man/Mail Man/Mail Man.csproj
+++ b/Mail Man/Mail Man/Mail Man.csproj
@@ -9,11 +9,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ceTe.DynamicPDF.CoreSuite.NET" Version="12.4.0" />
+    <None Remove="PostLogo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="ceTe.DynamicPDF.CoreSuite.NET" Version="12.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="PostLogo.png" />
   </ItemGroup>
 
 </Project>
