--- a/Mail Man/Mail Man/Mail Man.csproj
+++ b/Mail Man/Mail Man/Mail Man.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="ceTe.DynamicPDF.CoreSuite.NET" Version="12.5.0" />
+    <PackageReference Include="iTextSharp" Version="5.5.13.3" />
   </ItemGroup>
 
   <ItemGroup>
